--- a/dtv.conf
+++ b/dtv.conf
@@ -1,16 +1,4 @@
 [dtv]
+include_dir_stubs = ["include/", "scripts/dtc/include-prefixes/"]
+editor_cmd = "gedit $srcFileName +$srcLineNum"
 
-include_dir_stubs = ["include/","scripts/dtc/include-prefixes/"]
-
-# "editor_cmd" is used to launch an external editor
-# $srcFileName contains the filename (with fully-qualified path)
-# $srcLineNum contains the line number within the file to seek to.
-#
-# Setting for a few common editors
-# Uncomment your favorite editor, or write your own.
-# editor_cmd = "beany $srcFileName +$srcLineNum"
-# editor_cmd = "gedit $srcFileName +$srcLineNum"
-editor_cmd = "gvim $srcFileName +$srcLineNum"
-# editor_cmd = "pico +$srcLineNum" $srcFileName"
-# editor_cmd = "subl $srcFileName:$srcLineNum"
-# editor_cmd = "code --goto $srcFileName:$srcLineNum"
